# acorn_software

./: .gitignore  LICENSE  Modelfile  Modelfile.tools  QUICKSTART.md  README.md  _labels.json  acorn2.sh  deploy.sh  download_models.py  install.sh  pyproject.toml  setup_desktop_all_users.sh  setup_system.sh  update.sh
src/acorn/: __init__.py  plugin_base.py  plugin_loader.py
src/acorn/analysis/: __init__.py  sem_physics.py  sem_unet.py  surface_area.py  surface_area_stats.py  tracking.py
src/acorn/cli/: main.py
src/acorn/core/: _train_worker.py  annotations.py  contrast.py  dm4_loader.py  embedding_cache.py  frame_processor.py  measurements.py  quality.py  sam_predictor.py  star_loader.py  unet_predictor.py  unet_trainer.py  usam_predictor.py  yolo_predictor.py  yolo_trainer.py
src/acorn/export/: __init__.py  batch.py  dataset_finalizer.py  hub_exporter.py  image_exporter.py  mask_exporter.py  migrate_to_hdf5.py  nexus_exporter.py  training_exporter.py
src/acorn/gui/: analysis_panel.py  annotation_panel.py  canvas_widget.py  context.py  contrast_panel.py  dialogs.py  export_panel.py  main_window.py  measurement_panel.py  sam_panel.py  segmentation_panel.py  train_panel.py  unet_panel.py  yolo_panel.py
src/acorn/render/: annotation_renderer.py  canvas.py  scalebar.py
src/acorn_3d/: panel.py  plugin.py  volume_loader.py
src/acorn_analysis/: panel.py  particle_panel.py  plugin.py  sem_panel.py  sem_thread.py  thread.py
src/acorn_llm/: agent.py  config.py  panel.py  plugin.py  settings_dialog.py
src/acorn_plotting/: __init__.py  clu_integration.py  figures.py  panel.py  stats.py  style.py
src/acorn_spatial/: __init__.py  panel.py  plugin.py  spatial.py
src/acorn_tracking/: panel.py  plugin.py
